<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_drawer_primary_dark"
    tools:context=".views.details.PlaceDetailsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/material_drawer_primary_dark"
        tools:ignore="ScrollViewSize">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:scaleType="center"
            android:src="@drawable/ic_shortcut_call"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="10dp" />

        <com.github.ivbaranov.mfb.MaterialFavoriteButton
            android:id="@+id/fav_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/tv_place_name"
            android:layout_marginTop="3dp"
            android:layout_marginStart="3dp"
            app:mfb_animate_favorite="true"
            app:mfb_animate_unfavorite="true"
            app:mfb_size="54"
            app:mfb_favorite_image="@drawable/ic_star_white_24dp"
            app:mfb_not_favorite_image="@drawable/ic_star_border_white_24dp" />

        <ImageView
            android:id="@+id/iv_place"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:layout_below="@id/tv_place_open_hours"
            android:paddingTop="@dimen/tool_bar_top_padding"
            android:paddingBottom="@dimen/tool_bar_top_padding"
            android:contentDescription="@string/place_image" />

        <TextView
            android:id="@+id/tv_place_name"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_centerHorizontal="true"
            android:background="@color/material_drawer_primary_dark"
            android:gravity="center"
            android:text="@string/place_name"
            android:textColor="@color/material_drawer_primary_light"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_place_address"
            android:background="@color/material_drawer_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_below="@id/tv_place_name"
            android:gravity="center"
            android:text="@string/place_address"
            android:textColor="@color/material_drawer_primary_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_place_open_hours"
            android:background="@color/material_drawer_primary_dark"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingTop="6dp"
            android:layout_below="@id/tv_place_address"
            android:gravity="center"
            android:text="@string/place_open_hours"
            android:textColor="@color/material_drawer_primary_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_place_short_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:layout_below="@id/iv_place"
            android:gravity="center"
            android:text="@string/place_short_info"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/material_drawer_primary_light" />

    </RelativeLayout>

</ScrollView>